# cpp-workspace

./: .gitignore  mutithreadingPrintOddEven.cpp  template_perfect_forwarding.cpp  topview  topview.cpp  visitor_pattern.cpp
Singelton/: singelton.h
elevator/: Command.cpp  Command.h  Context.cpp  Context.h  Elevator.h  ElevatorContstant.h  ElevatorRunner  ElevatorRunner.cpp  Request.cpp  Request.h  State.cpp  State.h
elevator/ElevatorRunner.dSYM/Contents/: Info.plist
elevator/ElevatorRunner.dSYM/Contents/Resources/DWARF/: ElevatorRunner
heap_min_connecting_ropes/: minConnectingRopes.cpp
moderncpp/The-Art-of-Writing-Efficient-Programs-master/Chapter02/: 12_compare_mbm_c.C
moderncpp/module/: CMakeLists.txt  README.md
moderncpp/module/src/: CustomString.cpp  CustomStringArray.cppm  LockFreeSharedPtr.cppm  LockFreeSharedPtrGemini.cppm  LockFreeSharedWithWeakPtr.cppm  main.cpp
moderncpp/module/test/: CustomStringArrayTest.cpp  CustomStringTest.cpp  LockFreeSharedPtr.cppm  LockFreeSharedPtrTest.cpp  LockFreeSharedWithWeakPtrTest.cpp
moderncpp/presentation_type_erasure/: Makefile  main
moderncpp/ptr-spin-lock/: Makefile  myprogram
moderncpp/ptr-spin-lock/include/: spin_lock.h
moderncpp/ptr-spin-lock/src/: ptr_spin_lock.cpp
moderncpp/type-erasure/: CMakeLists.txt  Makefile  runTests[1]_include.cmake
moderncpp/type-erasure/include/: Function.h  Function1.h  circle.h  color.h  drawer.h  modernDraw.h
moderncpp/type-erasure/src/: DrawStrategy.cpp  SimpleDraw.cpp  drawer.cpp  main.cpp
moderncpp/type-erasure/test/: modernDrawTest.cpp
moderncpp/visitor/: myprogram  visitor.pptx
moderncpp/visitor/include/: color.h  point.h  square.h
moderncpp/visitor/src/: dijstra.cpp  main.cpp  objectOriented.cpp  procedural.cpp  variantdemo.cpp  visitor_old.cpp  visitor_variant.cpp
output/: variadictemplate
output/variadictemplate.dSYM/Contents/Resources/DWARF/: variadictemplate
output/variadictemplate.dSYM/Contents/Resources/Relocations/x86_64/: variadictemplate.yml
templates/: AClass.h  variadictemplate.cpp
templates/output/: variadictemplate
templates/output/variadictemplate.dSYM/Contents/: Info.plist
templates/output/variadictemplate.dSYM/Contents/Resources/DWARF/: variadictemplate
templates/output/variadictemplate.dSYM/Contents/Resources/Relocations/x86_64/: variadictemplate.yml
topview.dSYM/Contents/: Info.plist
topview.dSYM/Contents/Resources/DWARF/: topview
topview.dSYM/Contents/Resources/Relocations/x86_64/: topview.yml
variadictemplate.dSYM/Contents/Resources/DWARF/: variadictemplate
variadictemplate.dSYM/Contents/Resources/Relocations/x86_64/: variadictemplate.yml
